...
        NSAttributedStringKey.foregroundColor: UIColor(red: 1, green: 0.4, blue: 0.4, alpha: 1),
        NSAttributedStringKey.kern: 2,
        NSAttributedStringKey.font: UIFont(name: "AvenirNext-DemiBold", size: Settings.minScreenDimension * 0.06)!,
        ]
      label.shadowColor = UIColor(red: 0.35, green: 0.25, blue: 1, alpha: 1)
      label.shadowOffset = CGSize(width: 3, height: 3)
      label.attributedText = NSAttributedString(string: "PowerTimer", attributes: attributes)
      label.sizeToFit()
      return label
    }()
    self.navigationItem.titleView = titleLabel

    self.view.addSubview(self.clock)
...

    self.remakeConstraintsBasedOnOrientation()

    self.playPauseButton.addTarget(self, action: #selector(self.startBtnTapped), for: .touchUpInside)
    self.refreshButton.addTarget(self, action: #selector(self.resetBtnTapped), for: .touchUpInside)

    let menu = UIImage(named: "menu")!.withAlignmentRectInsets(UIEdgeInsets(top: 0, left: -5, bottom: 0, right: 0))
    let settings = UIBarButtonItem(image: menu, style: .plain, target: self, action: #selector(self.presentSettings))
    self.navigationItem.leftBarButtonItem = settings

    SideMenuManager.default.menuLeftNavigationController = UISideMenuNavigationController(rootViewController: SettingTableViewController())
    SideMenuManager.default.menuLeftNavigationController!.sideMenuDelegate = self
    SideMenuManager.default.menuAddScreenEdgePanGesturesToPresent(toView: self.navigationController!.view, forMenu: .left)
...
