//
//  PowerTimerUITests.swift
//  PowerTimerUITests
//
//  Created by Caitlin on 10/4/18.
//  Copyright © 2018 JEddie, LLC. All rights reserved.
//

import XCTest

class PowerTimerUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testTimer() {
      let app = XCUIApplication()
      snapshot("01Launch")
      app.buttons["play"].tap()
      sleep(5)
      snapshot("02Started")
      app.staticTexts["00:00"].tap()
      sleep(5)
      snapshot("03Rest")
      app.buttons["pause"].tap()
      snapshot("04Stopped")
//      XCTAssert(app.staticTexts["00:10"].exists)
//      XCTAssert(app.staticTexts["00:00"].exists)

      app.buttons["refresh"].tap()
//      XCTAssert(app.staticTexts["00:00"].exists)

      app.navigationBars["PowerTimer"].buttons["menu"].tap()
      sleep(1)
      snapshot("05Settings")
  }

}
